Add synonym entry in navbar
  - New synonyms lazy loaded module
  - New entry for synonyms in navbar (protected by feature flagging)
  - Cleanup navbar translations

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -665,23 +665,12 @@
 	"stash.side.api_keys": "API keys",
 	"stash.side.audit": "Audit",
 	"stash.side.classification": "Classification",
-	"stash.side.create": "Content creation",
-	"stash.side.entities": "Key concepts",
-	"stash.side.import": "Import files",
 	"stash.side.list": "Resources list",
-	"stash.side.manage": "Manage resources",
-	"stash.side.page": "Add page",
-	"stash.side.poweredby": "Powered by Nuclia",
-	"stash.side.results": "All content",
 	"stash.side.settings": "Settings",
-	"stash.side.sharing": "Sharing",
-	"stash.side.solutions": "Solutions",
-	"stash.side.templates": "Templates",
+	"stash.side.synonyms": "Synonyms",
 	"stash.side.trainings": "Trainings",
 	"stash.side.users": "Users",
-	"stash.side.view": "Resources visualization",
 	"stash.side.widgets": "Widgets",
-	"stash.side.working": "Processes ",
 	"stash.state": "State",
 	"stash.state.private": "State: private",
 	"stash.state.published": "State: public",
