--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -629,23 +629,12 @@
 	"stash.side.activity": "Registro de actividad",
 	"stash.side.audit": "Auditoría",
 	"stash.side.classification": "Clasificación",
-	"stash.side.create": "Creación de contenido",
-	"stash.side.entities": "Conceptos clave",
-	"stash.side.import": "Importa ficheros",
 	"stash.side.list": "Listado de recursos",
-	"stash.side.manage": "Gestiona recursos",
-	"stash.side.page": "Añadir página",
-	"stash.side.poweredby": "Desarrollado por Nuclia",
-	"stash.side.results": "Todos los contenidos",
 	"stash.side.settings": "Preferencias",
-	"stash.side.sharing": "Compartir",
-	"stash.side.solutions": "Soluciones",
-	"stash.side.templates": "Plantillas",
+	"stash.side.synonyms": "Sinónimos",
 	"stash.side.trainings": "Entrenamientos",
 	"stash.side.users": "Usuarios",
-	"stash.side.view": "Visualización de recursos",
 	"stash.side.widgets": "Widgets",
-	"stash.side.working": "Procesos",
 	"stash.state": "Estado",
 	"stash.state.private": "Estado: privado",
 	"stash.state.published": "Estado: público",
