--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -629,23 +629,12 @@
 	"stash.side.activity": "Registre d'activitat",
 	"stash.side.audit": "Auditoria",
 	"stash.side.classification": "Classificació",
-	"stash.side.create": "Creació de contingut",
-	"stash.side.entities": "Conceptes clau",
-	"stash.side.import": "Importa fitxers",
 	"stash.side.list": "Llistat recursos",
-	"stash.side.manage": "Gestiona recursos",
-	"stash.side.page": "Afegir pàgina",
-	"stash.side.poweredby": "Desenvolupat per Nuclia",
-	"stash.side.results": "Tot el contingut",
 	"stash.side.settings": "Preferències",
-	"stash.side.sharing": "Compartir",
-	"stash.side.solutions": "Solucions",
-	"stash.side.templates": "Plantilles",
+	"stash.side.synonyms": "Sinònims",
 	"stash.side.trainings": "Entrenaments",
 	"stash.side.users": "Usuaris",
-	"stash.side.view": "Visualització de recursos",
 	"stash.side.widgets": "Widgets",
-	"stash.side.working": "Processos",
 	"stash.state": "Estat",
 	"stash.state.private": "Estat: privat",
 	"stash.state.published": "Estat: públic",
