Add service managing synonyms + creation form

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -680,6 +680,11 @@
 	"stash.widgets.warning": "Perquè el giny funcioni correctament, el quadre de coneixement <strong>ha de ser públic</strong>.",
 	"stats.get_started": "Començar",
 	"stats.total.title": "Recursos",
+	"synonyms.add-form.bidirectional-checkbox": "Bidireccional",
+	"synonyms.add-form.main-word-label": "Paraula principal",
+	"synonyms.add-form.synonyms-label": "Sinònims separats per comes",
+	"synonyms.page-description": "Utilitzeu sinònims per millorar la cerca de text complet a la documentació tècnica",
+	"synonyms.page-title": "Sinònims personalitzats",
 	"tasks.credits.title": "Cicles disponibles",
 	"tasks.credits.upgrade": "Adquirir més cicles",
 	"training.history": "Historial d'entrenaments",
