--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -722,6 +722,11 @@
 	"stats.total.sentences": "Sentences",
 	"stats.total.title": "Resources",
 	"stats.total_search": "Total search operations",
+	"synonyms.add-form.bidirectional-checkbox": "Bidirectional",
+	"synonyms.add-form.main-word-label": "Main word",
+	"synonyms.add-form.synonyms-label": "Synonyms separated by commas",
+	"synonyms.page-description": "Use synonyms to enhance full text search in technical documentation",
+	"synonyms.page-title": "Custom synonyms",
 	"tasks.credits.title": "Available cycles",
 	"tasks.credits.upgrade": "Get more cycles",
 	"toast.information": "Information",
