--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -680,6 +680,11 @@
 	"stash.widgets.warning": "Para que el widget funcione correctamente, el cuadro de conocimiento <strong>debe ser público</strong>.",
 	"stats.get_started": "Empezar",
 	"stats.total.title": "Recursos",
+	"synonyms.add-form.bidirectional-checkbox": "Bidireccional",
+	"synonyms.add-form.main-word-label": "Palabra principal",
+	"synonyms.add-form.synonyms-label": "Sinónimos separados por comas",
+	"synonyms.page-description": "Use sinónimos para mejorar la búsqueda de texto completo en la documentación técnica",
+	"synonyms.page-title": "Sinónimos personalizados",
 	"tasks.credits.title": "Ciclos disponibles",
 	"tasks.credits.upgrade": "Adquirir más ciclos",
 	"training.history": "Historial de entrenamientos",
