--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -683,8 +683,15 @@
 	"synonyms.add-form.bidirectional-checkbox": "Bidireccional",
 	"synonyms.add-form.main-word-label": "Paraula principal",
 	"synonyms.add-form.synonyms-label": "Sinònims separats per comes",
+	"synonyms.confirm-deletion.description": "Esteu segur que voleu suprimir \"{{word}}\" i els seus sinònims \"{{synonyms}}\"?",
+	"synonyms.confirm-deletion.title": "Vols suprimir el sinònim?",
 	"synonyms.page-description": "Utilitzeu sinònims per millorar la cerca de text complet a la documentació tècnica",
 	"synonyms.page-title": "Sinònims personalitzats",
+	"synonyms.table.delete-synonym": "Esborra el sinònim",
+	"synonyms.table.edit-synonym": "Edita el sinònim",
+	"synonyms.table.main-word": "Paraula principal",
+	"synonyms.table.search": "Cerca un sinònim",
+	"synonyms.table.synonyms": "Sinònims",
 	"tasks.credits.title": "Cicles disponibles",
 	"tasks.credits.upgrade": "Adquirir més cicles",
 	"training.history": "Historial d'entrenaments",
