--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -725,8 +725,15 @@
 	"synonyms.add-form.bidirectional-checkbox": "Bidirectional",
 	"synonyms.add-form.main-word-label": "Main word",
 	"synonyms.add-form.synonyms-label": "Synonyms separated by commas",
+	"synonyms.confirm-deletion.description": "Are you sure you want to delete \"{{word}}\" and its synonyms \"{{synonyms}}\"?",
+	"synonyms.confirm-deletion.title": "Delete synonym?",
 	"synonyms.page-description": "Use synonyms to enhance full text search in technical documentation",
 	"synonyms.page-title": "Custom synonyms",
+	"synonyms.table.delete-synonym": "Delete synonym",
+	"synonyms.table.edit-synonym": "Edit synonym",
+	"synonyms.table.main-word": "Main word",
+	"synonyms.table.search": "Search a synonym",
+	"synonyms.table.synonyms": "Synonyms",
 	"tasks.credits.title": "Available cycles",
 	"tasks.credits.upgrade": "Get more cycles",
 	"toast.information": "Information",
