--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -683,8 +683,15 @@
 	"synonyms.add-form.bidirectional-checkbox": "Bidireccional",
 	"synonyms.add-form.main-word-label": "Palabra principal",
 	"synonyms.add-form.synonyms-label": "Sinónimos separados por comas",
+	"synonyms.confirm-deletion.description": "¿Está seguro de que desea eliminar \"{{word}}\" y sus sinónimos \"{{synonyms}}\"?",
+	"synonyms.confirm-deletion.title": "¿Eliminar sinónimo?",
 	"synonyms.page-description": "Use sinónimos para mejorar la búsqueda de texto completo en la documentación técnica",
 	"synonyms.page-title": "Sinónimos personalizados",
+	"synonyms.table.delete-synonym": "Eliminar sinónimo",
+	"synonyms.table.edit-synonym": "Editar sinónimo",
+	"synonyms.table.main-word": "Palabra principal",
+	"synonyms.table.search": "Buscar un sinónimo",
+	"synonyms.table.synonyms": "Sinónimos",
 	"tasks.credits.title": "Ciclos disponibles",
 	"tasks.credits.upgrade": "Adquirir más ciclos",
 	"training.history": "Historial de entrenamientos",
