[sc-4377] flow to create synonyms (#631)
* Add synonyms glyph & fix color of a download.svg and volume-low.svg

* Add synonym entry in navbar

  - New synonyms lazy loaded module
  - New entry for synonyms in navbar (protected by feature flagging)
  - Cleanup navbar translations

* Add service managing synonyms + creation form

* Synonym table

  - show synonyms in table
  - edit and delete synonyms features

* Synonym feature available only for business accounts

* Replace edition mode pink background by neutral-lightest one

* Fix unit tests

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -629,23 +629,12 @@
 	"stash.side.activity": "Registre d'activitat",
 	"stash.side.audit": "Auditoria",
 	"stash.side.classification": "Classificació",
-	"stash.side.create": "Creació de contingut",
-	"stash.side.entities": "Conceptes clau",
-	"stash.side.import": "Importa fitxers",
 	"stash.side.list": "Llistat recursos",
-	"stash.side.manage": "Gestiona recursos",
-	"stash.side.page": "Afegir pàgina",
-	"stash.side.poweredby": "Desenvolupat per Nuclia",
-	"stash.side.results": "Tot el contingut",
 	"stash.side.settings": "Preferències",
-	"stash.side.sharing": "Compartir",
-	"stash.side.solutions": "Solucions",
-	"stash.side.templates": "Plantilles",
+	"stash.side.synonyms": "Sinònims",
 	"stash.side.trainings": "Entrenaments",
 	"stash.side.users": "Usuaris",
-	"stash.side.view": "Visualització de recursos",
 	"stash.side.widgets": "Widgets",
-	"stash.side.working": "Processos",
 	"stash.state": "Estat",
 	"stash.state.private": "Estat: privat",
 	"stash.state.published": "Estat: públic",
@@ -691,6 +680,18 @@
 	"stash.widgets.warning": "Perquè el giny funcioni correctament, el quadre de coneixement <strong>ha de ser públic</strong>.",
 	"stats.get_started": "Començar",
 	"stats.total.title": "Recursos",
+	"synonyms.add-form.bidirectional-checkbox": "Bidireccional",
+	"synonyms.add-form.main-word-label": "Paraula principal",
+	"synonyms.add-form.synonyms-label": "Sinònims separats per comes",
+	"synonyms.confirm-deletion.description": "Esteu segur que voleu suprimir \"{{word}}\" i els seus sinònims \"{{synonyms}}\"?",
+	"synonyms.confirm-deletion.title": "Vols suprimir el sinònim?",
+	"synonyms.page-description": "Utilitzeu sinònims per millorar la cerca de text complet a la documentació tècnica",
+	"synonyms.page-title": "Sinònims personalitzats",
+	"synonyms.table.delete-synonym": "Esborra el sinònim",
+	"synonyms.table.edit-synonym": "Edita el sinònim",
+	"synonyms.table.main-word": "Paraula principal",
+	"synonyms.table.search": "Cerca un sinònim",
+	"synonyms.table.synonyms": "Sinònims",
 	"tasks.credits.title": "Cicles disponibles",
 	"tasks.credits.upgrade": "Adquirir més cicles",
 	"training.history": "Historial d'entrenaments",
