--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -629,23 +629,12 @@
 	"stash.side.activity": "Registro de actividad",
 	"stash.side.audit": "Auditoría",
 	"stash.side.classification": "Clasificación",
-	"stash.side.create": "Creación de contenido",
-	"stash.side.entities": "Conceptos clave",
-	"stash.side.import": "Importa ficheros",
 	"stash.side.list": "Listado de recursos",
-	"stash.side.manage": "Gestiona recursos",
-	"stash.side.page": "Añadir página",
-	"stash.side.poweredby": "Desarrollado por Nuclia",
-	"stash.side.results": "Todos los contenidos",
 	"stash.side.settings": "Preferencias",
-	"stash.side.sharing": "Compartir",
-	"stash.side.solutions": "Soluciones",
-	"stash.side.templates": "Plantillas",
+	"stash.side.synonyms": "Sinónimos",
 	"stash.side.trainings": "Entrenamientos",
 	"stash.side.users": "Usuarios",
-	"stash.side.view": "Visualización de recursos",
 	"stash.side.widgets": "Widgets",
-	"stash.side.working": "Procesos",
 	"stash.state": "Estado",
 	"stash.state.private": "Estado: privado",
 	"stash.state.published": "Estado: público",
@@ -691,6 +680,18 @@
 	"stash.widgets.warning": "Para que el widget funcione correctamente, el cuadro de conocimiento <strong>debe ser público</strong>.",
 	"stats.get_started": "Empezar",
 	"stats.total.title": "Recursos",
+	"synonyms.add-form.bidirectional-checkbox": "Bidireccional",
+	"synonyms.add-form.main-word-label": "Palabra principal",
+	"synonyms.add-form.synonyms-label": "Sinónimos separados por comas",
+	"synonyms.confirm-deletion.description": "¿Está seguro de que desea eliminar \"{{word}}\" y sus sinónimos \"{{synonyms}}\"?",
+	"synonyms.confirm-deletion.title": "¿Eliminar sinónimo?",
+	"synonyms.page-description": "Use sinónimos para mejorar la búsqueda de texto completo en la documentación técnica",
+	"synonyms.page-title": "Sinónimos personalizados",
+	"synonyms.table.delete-synonym": "Eliminar sinónimo",
+	"synonyms.table.edit-synonym": "Editar sinónimo",
+	"synonyms.table.main-word": "Palabra principal",
+	"synonyms.table.search": "Buscar un sinónimo",
+	"synonyms.table.synonyms": "Sinónimos",
 	"tasks.credits.title": "Ciclos disponibles",
 	"tasks.credits.upgrade": "Adquirir más ciclos",
 	"training.history": "Historial de entrenamientos",
