--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -665,23 +665,12 @@
 	"stash.side.api_keys": "API keys",
 	"stash.side.audit": "Audit",
 	"stash.side.classification": "Classification",
-	"stash.side.create": "Content creation",
-	"stash.side.entities": "Key concepts",
-	"stash.side.import": "Import files",
 	"stash.side.list": "Resources list",
-	"stash.side.manage": "Manage resources",
-	"stash.side.page": "Add page",
-	"stash.side.poweredby": "Powered by Nuclia",
-	"stash.side.results": "All content",
 	"stash.side.settings": "Settings",
-	"stash.side.sharing": "Sharing",
-	"stash.side.solutions": "Solutions",
-	"stash.side.templates": "Templates",
+	"stash.side.synonyms": "Synonyms",
 	"stash.side.trainings": "Trainings",
 	"stash.side.users": "Users",
-	"stash.side.view": "Resources visualization",
 	"stash.side.widgets": "Widgets",
-	"stash.side.working": "Processes ",
 	"stash.state": "State",
 	"stash.state.private": "State: private",
 	"stash.state.published": "State: public",
@@ -733,6 +722,18 @@
 	"stats.total.sentences": "Sentences",
 	"stats.total.title": "Resources",
 	"stats.total_search": "Total search operations",
+	"synonyms.add-form.bidirectional-checkbox": "Bidirectional",
+	"synonyms.add-form.main-word-label": "Main word",
+	"synonyms.add-form.synonyms-label": "Synonyms separated by commas",
+	"synonyms.confirm-deletion.description": "Are you sure you want to delete \"{{word}}\" and its synonyms \"{{synonyms}}\"?",
+	"synonyms.confirm-deletion.title": "Delete synonym?",
+	"synonyms.page-description": "Use synonyms to enhance full text search in technical documentation",
+	"synonyms.page-title": "Custom synonyms",
+	"synonyms.table.delete-synonym": "Delete synonym",
+	"synonyms.table.edit-synonym": "Edit synonym",
+	"synonyms.table.main-word": "Main word",
+	"synonyms.table.search": "Search a synonym",
+	"synonyms.table.synonyms": "Synonyms",
 	"tasks.credits.title": "Available cycles",
 	"tasks.credits.upgrade": "Get more cycles",
 	"toast.information": "Information",
