--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -656,6 +656,8 @@
 	"stash.valid_emails_label": "Correus electrònics",
 	"stash.view_edit_service_access": "Visualitza / Edita els Service Access existents",
 	"stash.widgets": "Widgets",
+	"stash.widgets.answers": "Generació de respostes",
+	"stash.widgets.answers.help": "Genera resposta a les preguntes dels usuaris i permet xatejar amb el sistema",
 	"stash.widgets.configuration": "Configuració del widget",
 	"stash.widgets.editLabels": "Edita les etiquetes",
 	"stash.widgets.editLabels.help": "Permet afegir/eliminar etiquetes de la vista de recursos",
