--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -692,7 +692,7 @@
 	"stash.view_edit_service_access": "View / Edit existing Service Access",
 	"stash.widgets": "Widgets",
 	"stash.widgets.answers": "Answer generation",
-	"stash.widgets.answers.help": "Generate answer to user questions and allow to chat with the system",
+	"stash.widgets.answers.help": "Generate a response to the user's questions and allow to chat with the system",
 	"stash.widgets.configuration": "Widget configuration",
 	"stash.widgets.editLabels": "Edit labels",
 	"stash.widgets.editLabels.help": "Allows to add/remove labels from the resource view",
