[sc-4273]: Allow to edit origin attributes on resource

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -457,14 +457,12 @@
 	"resource.add_labels": "Add labels",
 	"resource.add_labels_error": "An error occurred while adding labels on {{count}} resources",
 	"resource.add_labels_success": "Labels successfully added on {{count}} resources",
-	"resource.authorship": "Authorship",
 	"resource.classification-column": "Classification",
 	"resource.classification-page-link": "Classification page",
 	"resource.classification.clean-up": "Clean up",
 	"resource.classification.no-paragraph-labelset": "There is no label set for paragraphs. You can add some in",
 	"resource.classification.no-resource-labelset": "There is no label set for resources. You can add some in",
 	"resource.classification.remove-label": "Remove label from selection",
-	"resource.created": "Created",
 	"resource.delete_resource_confirm": "Delete resource?",
 	"resource.delete_resource_title": "Are you sure you want to delete the resource?",
 	"resource.delete_resource_warning": "If you delete this resource all information, fields, and entities created during its processing will disappear. You cannot undo this action. ",
@@ -517,6 +515,13 @@
 	"resource.menu.annotate": "Annotate",
 	"resource.menu.classify": "Classify",
 	"resource.menu.edit": "Edit",
+	"resource.origin.collaborators": "Collaborators",
+	"resource.origin.collaborators-helper": "Comma-separated list of collaborators",
+	"resource.origin.created": "Created",
+	"resource.origin.filename": "Filename",
+	"resource.origin.modified": "Modified",
+	"resource.origin.related": "Related",
+	"resource.origin.url": "URL",
 	"resource.pending_resources_popover": "Files pending to be processed",
 	"resource.preview.open-viewer": "Open viewer",
 	"resource.processed_resources": "Processed resources",
@@ -541,8 +546,7 @@
 	"resource.status_processed": "Processing completed",
 	"resource.status_processing": "Processing in progress",
 	"resource.status_unknown": "No status available for this account processing queue yet",
-	"resource.summary": "Abstract",
-	"resource.summary.help": "Displayed as preview",
+	"resource.summary": "Summary",
 	"resource.text": "Text",
 	"resource.thumbnail": "Thumbnail",
 	"resource.thumbnail.drop": "Drop image or click here",
