--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -433,14 +433,12 @@
 	"resource.add_labels": "Agregar etiquetas",
 	"resource.add_labels_error": "Se produjo un error al agregar etiquetas en {{count}} recursos",
 	"resource.add_labels_success": "Etiquetas añadidas correctamente en {{count}} recursos",
-	"resource.authorship": "Autoría",
 	"resource.classification-column": "Clasificación",
 	"resource.classification-page-link": "página de Clasificación",
 	"resource.classification.clean-up": "Limpiar",
 	"resource.classification.no-paragraph-labelset": "No hay un conjunto de etiquetas para los párrafos. Puedes agregar algunos en",
 	"resource.classification.no-resource-labelset": "No hay ninguna etiqueta establecida para los recursos. Puedes agregar algunos en",
 	"resource.classification.remove-label": "Eliminar etiqueta de la selección",
-	"resource.created": "Data de creación",
 	"resource.delete_resource_confirm": "¿Eliminar recurso?",
 	"resource.delete_resource_title": "¿Está seguro de que desea eliminar el recurso?",
 	"resource.delete_resource_warning": "Si elimina este recurso, toda la información, los campos y las entidades creadas durante su procesamiento desaparecerán. No puede deshacer esta acción.",
@@ -493,6 +491,13 @@
 	"resource.menu.annotate": "Anotar",
 	"resource.menu.classify": "Clasificar",
 	"resource.menu.edit": "Editar",
+	"resource.origin.collaborators": "Colaboradores",
+	"resource.origin.collaborators-helper": "Lista de colaboradores separados por comas",
+	"resource.origin.created": "Data de creación",
+	"resource.origin.filename": "Nombre del archivo",
+	"resource.origin.modified": "Modificado",
+	"resource.origin.related": "Relacionado",
+	"resource.origin.url": "URL",
 	"resource.pending_resources_popover": "Expedientes pendientes de tramitar",
 	"resource.preview.open-viewer": "Visor abierto",
 	"resource.processed_resources": "Recursos procesados",
