--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -433,14 +433,12 @@
 	"resource.add_labels": "Afegeix etiquetes",
 	"resource.add_labels_error": "S'ha produït un error en afegir etiquetes als recursos {{count}}",
 	"resource.add_labels_success": "S'han afegit correctament etiquetes a {{count}} recursos",
-	"resource.authorship": "Autoria",
 	"resource.classification-column": "Classificació",
 	"resource.classification-page-link": "pàgina de Classificació",
 	"resource.classification.clean-up": "Netejar",
 	"resource.classification.no-paragraph-labelset": "No hi ha cap etiqueta establerta per als paràgrafs. Podeu afegir-ne alguns",
 	"resource.classification.no-resource-labelset": "No hi ha cap etiqueta establerta per als recursos. Podeu afegir-ne alguns",
 	"resource.classification.remove-label": "Elimina l'etiqueta de la selecció",
-	"resource.created": "Data creació",
 	"resource.delete_resource_confirm": "Vols suprimir el recurs?",
 	"resource.delete_resource_title": "Esteu segur que voleu suprimir el recurs?",
 	"resource.delete_resource_warning": "Si suprimiu aquest recurs, tota la informació, camps i entitats creades durant el seu processament desapareixeran. No podeu desfer aquesta acció.",
@@ -493,6 +491,13 @@
 	"resource.menu.annotate": "Anotar",
 	"resource.menu.classify": "Classificar",
 	"resource.menu.edit": "Edita",
+	"resource.origin.collaborators": "Col·laboradors",
+	"resource.origin.collaborators-helper": "Llista de col·laboradors separats per comes",
+	"resource.origin.created": "Data creació",
+	"resource.origin.filename": "Nom de l'arxiu",
+	"resource.origin.modified": "Modificat",
+	"resource.origin.related": "Relacionats",
+	"resource.origin.url": "URL",
 	"resource.pending_resources_popover": "Expedients pendents de processar",
 	"resource.preview.open-viewer": "Visor obert",
 	"resource.processed_resources": "Recursos processats",
