Fix [sc-4561]: update kb switcher when kb list changes
  - add `kbList` and `currentAccount` observables in `sdk.service`
  - use and update `kbList` in account pages
  - Add missing translation in account home page

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -68,10 +68,11 @@
 	"account.token_description": "<strong>Important!</strong> Copia i guarda el codi del Token. Un cop afegit, desapareixerà. ",
 	"account.token_generation_warning": "Si generes un nou codi perdràs l’accés amb la clau actual i es perdran els processos que s'estiguin executant en aquests moments.",
 	"account.total_queries": "Nombre total de cerques",
-	"account.type.kb": "Caixes de coneixement",
-	"account.type.manage": "Gestionar",
+	"account.type.label": "Nivell",
 	"account.type.stash-basic": "Compte Bàsic",
+	"account.type.stash-business": "Compte d'empresa",
 	"account.type.stash-enterprise": "Compte d'empresa",
+	"account.type.stash-pro": "Compte professional",
 	"account.type.stash-team": "Compte d'equips",
 	"account.users": "Gestió d'usuaris",
 	"account.users_amount": "Nombre total d'usuaris al compte",
