--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -68,10 +68,11 @@
 	"account.token_description": "<strong>¡Importante!</strong> Copia y guarda el código del Token. Una vez añadido, desaparecerá.",
 	"account.token_generation_warning": "Si generas un nuevo código perderás el acceso con la clave actual y se perderán los procesos que se estén ejecutando en estos momentos.",
 	"account.total_queries": "Número total de búsquedas",
-	"account.type.kb": "Cajas de conocimiento",
-	"account.type.manage": "Gestionar",
+	"account.type.label": "Nivel",
 	"account.type.stash-basic": "Cuenta básica",
+	"account.type.stash-business": "Cuenta de negocios",
 	"account.type.stash-enterprise": "Cuenta empresarial",
+	"account.type.stash-pro": "Cuenta profesional",
 	"account.type.stash-team": "Cuenta de equipos",
 	"account.users": "Gestión de usuarios",
 	"account.users_amount": "Usuarios totales a la cuenta",
