--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -78,10 +78,11 @@
 	"account.token_description": "<strong>Important!</strong> Copy and save the Token code. It will disappear once added.",
 	"account.token_generation_warning": "If you generate a new key, the current key will be disabled and any ongoing jobs will be lost",
 	"account.total_queries": "Total number of queries",
-	"account.type.kb": "Knowledge box",
-	"account.type.manage": "Manage",
+	"account.type.label": "Tier",
 	"account.type.stash-basic": "Basic Account",
+	"account.type.stash-business": "Business Account",
 	"account.type.stash-enterprise": "Enterprise Account",
+	"account.type.stash-pro": "Professional Account",
 	"account.type.stash-team": "Teams Account",
 	"account.users": "Account users management",
 	"account.users_amount": "Total number of users in the account",
