--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -440,12 +440,13 @@
 	"resource.classification.no-paragraph-labelset": "No hi ha cap etiqueta establerta per als paràgrafs. Podeu afegir-ne alguns",
 	"resource.classification.no-resource-labelset": "No hi ha cap etiqueta establerta per als recursos. Podeu afegir-ne alguns",
 	"resource.classification.remove-label": "Elimina l'etiqueta de la selecció",
+	"resource.confirm-delete.description": "Si suprimiu aquest recurs, tota la informació, camps i entitats creades durant el seu processament desapareixeran. No podeu desfer aquesta acció.",
+	"resource.confirm-delete.plural-description": "Si suprimiu aquests recursos, tota la informació, camps i entitats creades durant el seu processament desapareixeran. No podeu desfer aquesta acció.",
+	"resource.confirm-delete.title": "Esteu segur que voleu suprimir el recurs?",
+	"resource.confirm-reprocess.description": "Necessitem un temps per processar les dades. Un cop reprocessat el podeu veure a la pàgina de la llista de recursos disponible per editar, classificar o anotar.",
+	"resource.confirm-reprocess.title": "Esteu segur que voleu tornar a processar el recurs?",
 	"resource.delete_resource_confirm": "Vols suprimir el recurs?",
-	"resource.delete_resource_title": "Esteu segur que voleu suprimir el recurs?",
-	"resource.delete_resource_warning": "Si suprimiu aquest recurs, tota la informació, camps i entitats creades durant el seu processament desapareixeran. No podeu desfer aquesta acció.",
 	"resource.delete_resources_confirm": "Vols suprimir recursos?",
-	"resource.delete_resources_title": "Esteu segur que voleu suprimir els recursos?",
-	"resource.delete_resources_warning": "Si elimines aquests documents també s’esborrarà tota la informació processada.",
 	"resource.description.title": "Descripció",
 	"resource.empty": "No hi ha contingut al vostre caixa de coneixement en aquest moment.",
 	"resource.empty.import": "Comenceu a utilitzar Nuclia a l'instant escollint un conjunt de dades de mostra. Aquesta és la manera més ràpida de començar i explorar com funciona Nuclia.",
@@ -504,8 +505,6 @@
 	"resource.processed_resources": "Recursos processats",
 	"resource.profile": "Recurs",
 	"resource.reindex-all-info": "S'ha iniciat el reprocessament de tots els recursos per error. Això pot trigar una mica.",
-	"resource.reprocess_resource_description": "Necessitem un temps per processar les dades. Un cop reprocessat el podeu veure a la pàgina de la llista de recursos disponible per editar, classificar o anotar.",
-	"resource.reprocess_resource_title": "Esteu segur que voleu tornar a processar el recurs?",
 	"resource.resource_page_number": "{{num}} per pàgina",
 	"resource.resources": "Recursos",
 	"resource.save-successful": "S'ha guardat el recurs",
