--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -440,12 +440,13 @@
 	"resource.classification.no-paragraph-labelset": "No hay un conjunto de etiquetas para los párrafos. Puedes agregar algunos en",
 	"resource.classification.no-resource-labelset": "No hay ninguna etiqueta establecida para los recursos. Puedes agregar algunos en",
 	"resource.classification.remove-label": "Eliminar etiqueta de la selección",
+	"resource.confirm-delete.description": "Si elimina este recurso, toda la información, los campos y las entidades creadas durante su procesamiento desaparecerán. No puede deshacer esta acción.",
+	"resource.confirm-delete.plural-description": "Si elimina esos recursos, toda la información, los campos y las entidades creadas durante su procesamiento desaparecerán. No puede deshacer esta acción.",
+	"resource.confirm-delete.title": "¿Está seguro de que desea eliminar el recurso?",
+	"resource.confirm-reprocess.description": "Necesitamos algo de tiempo para procesar los datos. Una vez reprocesado, puede verlo en la página de la lista de recursos disponible para editar, clasificar o anotar.",
+	"resource.confirm-reprocess.title": "¿Está seguro de que desea volver a procesar el recurso?",
 	"resource.delete_resource_confirm": "¿Eliminar recurso?",
-	"resource.delete_resource_title": "¿Está seguro de que desea eliminar el recurso?",
-	"resource.delete_resource_warning": "Si elimina este recurso, toda la información, los campos y las entidades creadas durante su procesamiento desaparecerán. No puede deshacer esta acción.",
 	"resource.delete_resources_confirm": "¿Eliminar recursos?",
-	"resource.delete_resources_title": "¿Está seguro de que desea eliminar los recursos?",
-	"resource.delete_resources_warning": "Si eliminas estos documentos también se borrará toda la información procesada.",
 	"resource.description.title": "Descripción",
 	"resource.empty": "No hay contenido en su caja de conocimiento en este momento.",
 	"resource.empty.import": "Comience a usar Nuclia al instante eligiendo un conjunto de datos de muestra. Esta es la forma más rápida de comenzar y explorar cómo funciona Nuclia.",
@@ -504,8 +505,6 @@
 	"resource.processed_resources": "Recursos procesados",
 	"resource.profile": "Recurso",
 	"resource.reindex-all-info": "Se inició el reprocesamiento de todos los recursos por error. Esto puede tomar algo de tiempo.",
-	"resource.reprocess_resource_description": "Necesitamos algo de tiempo para procesar los datos. Una vez reprocesado, puede verlo en la página de la lista de recursos disponible para editar, clasificar o anotar.",
-	"resource.reprocess_resource_title": "¿Está seguro de que desea volver a procesar el recurso?",
 	"resource.resource_page_number": "{{num}} por página",
 	"resource.resources": "Recursos",
 	"resource.save-successful": "Recurso guardado",
