[sc-4648] Implement payment form

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -96,6 +96,8 @@
 	"billing.address": "Adreça",
 	"billing.billing_details": "Dades de facturació",
 	"billing.budget_calculator": "Estimació del pressupost",
+	"billing.card_details": "Detalls de la targeta",
+	"billing.card_name": "Titular de la targeta",
 	"billing.city": "Ciutat",
 	"billing.company": "Empresa",
 	"billing.contact": "Contactar",
@@ -119,11 +121,12 @@
 	"billing.payment_details": "Dades de pagament",
 	"billing.payment_details.description": "El pagament no es farà efectiu fins a finals de mes en funció del vostre ús.",
 	"billing.payment_method": "Mètode de pagament",
+	"billing.postal_code": "Còdi postal",
+	"billing.save_continue": "Desar i Continuar",
 	"billing.state": "Província",
 	"billing.subscription_plans": "Plans de subscripció",
 	"billing.upgrade": "Actualitzar",
 	"billing.vat_id": "VAT ID",
-	"billing.zip": "Còdi postal",
 	"confirm.delete_body": "Eliminar recurs",
 	"confirm.delete_title": "Segur que vols eliminar el recurs?",
 	"empty.body": "Sembla que no hem pogut trobar cap resultats que sigui prou rellevant. Si us plau, intenta-ho de nou. ",
