--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -96,6 +96,8 @@
 	"billing.address": "Dirección",
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget_calculator": "Estimación del presupuesto",
+	"billing.card_details": "Detalles de la tarjeta",
+	"billing.card_name": "Titular de la tarjeta",
 	"billing.city": "Ciudad",
 	"billing.company": "Empresa",
 	"billing.contact": "Contactar",
@@ -119,11 +121,12 @@
 	"billing.payment_details": "Datos de pago",
 	"billing.payment_details.description": "El pago no se hará efectivo hasta finales de mes en función del uso realizado.",
 	"billing.payment_method": "Método de pago",
+	"billing.postal_code": "Código postal",
+	"billing.save_continue": "Guardar y Continuar",
 	"billing.state": "Provincia",
 	"billing.subscription_plans": "Planes de subscripción",
 	"billing.upgrade": "Actualizar",
 	"billing.vat_id": "VAT ID",
-	"billing.zip": "Código postal",
 	"confirm.delete_body": "Eliminar recurso",
 	"confirm.delete_title": "¿Seguro que quieres eliminar este recurso?",
 	"empty.body": "Parece que no hemos podido encontrar ningún resultado lo suficientemente relevante. Por favor, vuelve a intentarlo",
