--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -109,6 +109,8 @@
 	"billing.budget": "On-demand budget",
 	"billing.budget_calculator": "Budget calculator",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
+	"billing.card_details": "Card details",
+	"billing.card_name": "Name on card",
 	"billing.city": "City",
 	"billing.company": "Company",
 	"billing.contact": "Contact us",
@@ -133,11 +135,12 @@
 	"billing.payment_details": "Payment details",
 	"billing.payment_details.description": "Your payment method will not be billed until the end of the month based on your usage.",
 	"billing.payment_method": "Payment method",
+	"billing.postal_code": "ZIP",
+	"billing.save_continue": "Save & Continue",
 	"billing.state": "State",
 	"billing.subscription_plans": "Subscription plans",
 	"billing.upgrade": "Upgrade",
 	"billing.vat_id": "VAT ID",
-	"billing.zip": "ZIP",
 	"confirm.delete_body": "Delete resource",
 	"confirm.delete_title": "Are you sure you want to delete this resource?",
 	"empty.body": "We couldn’t find any relevant results. ",
