--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -2,7 +2,8 @@
 	"answer.chat-action": "Xateja amb els teus documents",
 	"answer.input.label": "Entrada de xat",
 	"answer.placeholder": "Parlem",
-	"answer.sources": "Fonts",
+	"answer.sources": "A partir d'aquestes fonts",
+	"answer.title": "Resposta",
 	"entities.annotated": "Anotacions",
 	"entities.annotations": "Anotacions",
 	"entities.date": "Dates",
