--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -2,7 +2,8 @@
 	"answer.chat-action": "Chat with your docs",
 	"answer.input.label": "Chat input",
 	"answer.placeholder": "Let's chat",
-	"answer.sources": "Sources",
+	"answer.sources": "Based on these sources",
+	"answer.title": "Answer",
 	"entities.annotated": "Annotated",
 	"entities.annotations": "Annotations",
 	"entities.date": "Date",
