--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -2,7 +2,8 @@
 	"answer.chat-action": "Discutez avec vos documents",
 	"answer.input.label": "Champ de saisie du chat",
 	"answer.placeholder": "Discutons",
-	"answer.sources": "Sources",
+	"answer.sources": "Sur la base de ces sources",
+	"answer.title": "Réponse",
 	"entities.annotated": "Annotations",
 	"entities.annotations": "Annotations",
 	"entities.date": "Dates",
