Ericbrehault/sc 4607/move from search to find (#633)
* refactor info card in component

* answer store

* send feedback

* show sources

* Dialog modal

* dialog input

* fix responsive

* fix close button layout

* speech recognition

* Mat review fixes

* rename dialog into chat for clarity

* fix talk2svelte build

* add speech synthesis

* find endpoint support

* Use chat endpoint

* pass context with question

* use /find

* Use tiles to render answer sources

* fix layout

* fix search in resource

* fix streaming

* feature flag on answer generation

* fix search in resource again

* fix expanded tile

* fix layout

* fix chat call

* get field data

* fix tests + clean up

* add feedback endpoint

* fix suggestions

* restore info card

* review

* clean up

* fix layout

* fix answer store

* fix speak

* render newlines in answers

* fix layout

* fix feedback

* do not enable answer in dashboard search if feature flagged

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -691,6 +691,8 @@
 	"stash.valid_emails_label": "Emails",
 	"stash.view_edit_service_access": "View / Edit existing Service Access",
 	"stash.widgets": "Widgets",
+	"stash.widgets.answers": "Answer generation",
+	"stash.widgets.answers.help": "Generate a response to the user's questions and allow to chat with the system",
 	"stash.widgets.configuration": "Widget configuration",
 	"stash.widgets.editLabels": "Edit labels",
 	"stash.widgets.editLabels.help": "Allows to add/remove labels from the resource view",
