--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -1,4 +1,9 @@
 {
+	"answer.chat-action": "Chatea con tus documentos",
+	"answer.input.label": "Entrada de chat",
+	"answer.placeholder": "Charlemos",
+	"answer.sources": "Basado en estas fuentes",
+	"answer.title": "Respuesta",
 	"entities.annotated": "Anotaciones",
 	"entities.annotations": "Anotaciones",
 	"entities.date": "Fechas",
