--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -434,6 +434,7 @@
 	"resource.add_labels": "Afegeix etiquetes",
 	"resource.add_labels_error": "S'ha produït un error en afegir etiquetes als recursos {{count}}",
 	"resource.add_labels_success": "S'han afegit correctament etiquetes a {{count}} recursos",
+	"resource.adding_labels": "Afegint etiquetes",
 	"resource.classification-column": "Classificació",
 	"resource.classification-page-link": "pàgina de Classificació",
 	"resource.classification.clean-up": "Netejar",
