[sc-4752] Implement cost estimation modal

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -95,6 +95,7 @@
 	"autocomplete.section.paragraph": "Paràgraf suggerit",
 	"billing.address": "Adreça",
 	"billing.billing_details": "Dades de facturació",
+	"billing.budget_calculator": "Estimació del pressupost",
 	"billing.city": "Ciutat",
 	"billing.company": "Empresa",
 	"billing.contact": "Contactar",
@@ -105,7 +106,16 @@
 	"billing.customized_plan": "Si necessites ampliar o personalitzar un pla per a la teva empresa, no dubtis a contactar amb nosaltres.",
 	"billing.estimate_cost": "Estima el teu cost",
 	"billing.free": "Gratuït",
+	"billing.hosting_subscription": "Subscripció d'allotjament",
+	"billing.ingestion_cost": "Costos d'ingestió",
+	"billing.ingestion_cost.description": "És proporcional al consum. Calculem el consum per nombre de paràgrafs.<br> Aquí pots fer una aproximació mensual segons les teves necessitats.",
 	"billing.month": "Mes",
+	"billing.monthly_estimation": "Cost mensual estimat",
+	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
+	"billing.parameter.documents": "Quants documents?",
+	"billing.parameter.hosting": "Allotjament de dades en paràgrafs",
+	"billing.parameter.hours": "Quantes hores de vídeos/àudios?",
+	"billing.parameter.searches": "Quantes cerques?",
 	"billing.payment_details": "Dades de pagament",
 	"billing.payment_details.description": "El pagament no es farà efectiu fins a finals de mes en funció del vostre ús.",
 	"billing.payment_method": "Mètode de pagament",
