--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -107,6 +107,7 @@
 	"billing.address": "Address",
 	"billing.billing_details": "Billing details",
 	"billing.budget": "On-demand budget",
+	"billing.budget_calculator": "Budget calculator",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
 	"billing.city": "City",
 	"billing.company": "Company",
@@ -118,8 +119,17 @@
 	"billing.customized_plan": "If you need to expand and customize a plan for your business, please do not hesitate to contact us.",
 	"billing.estimate_cost": "Estimate your cost",
 	"billing.free": "Free",
+	"billing.hosting_subscription": "Hosting subscription",
+	"billing.ingestion_cost": "Ingestion costs",
+	"billing.ingestion_cost.description": "Will be proportional to consumption. We calculate consumption by number of paragraphs.<br> Here you can make a real monthly approximation according to your needs.",
 	"billing.month": "Month",
+	"billing.monthly_estimation": "Monthly estimated cost",
+	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
 	"billing.notes": "*Suggestions are 1/4 of a search and questions are 2 searches",
+	"billing.parameter.documents": "How many documents?",
+	"billing.parameter.hosting": "Data hosting in paragraphs",
+	"billing.parameter.hours": "How many hours of videos/audios?",
+	"billing.parameter.searches": "How many searches?",
 	"billing.payment_details": "Payment details",
 	"billing.payment_details.description": "Your payment method will not be billed until the end of the month based on your usage.",
 	"billing.payment_method": "Payment method",
