--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -95,6 +95,7 @@
 	"autocomplete.section.paragraph": "Párrafo sugerido",
 	"billing.address": "Dirección",
 	"billing.billing_details": "Datos de facturación",
+	"billing.budget_calculator": "Estimación del presupuesto",
 	"billing.city": "Ciudad",
 	"billing.company": "Empresa",
 	"billing.contact": "Contactar",
@@ -105,7 +106,16 @@
 	"billing.customized_plan": "Si necesitas ampliar o personalizar un plan para tu empresa, no dudes en contactar con nosotros.",
 	"billing.estimate_cost": "Estima tu coste",
 	"billing.free": "Gratuito",
+	"billing.hosting_subscription": "Subscripción de alojamiento",
+	"billing.ingestion_cost": "Costos de ingestión",
+	"billing.ingestion_cost.description": "Es proporcional al consumo. Calculamos el consumo por número de párrafos.<br> Aquí puedes hacer una aproximación mensual según tus necesidades.",
 	"billing.month": "Mes",
+	"billing.monthly_estimation": "Coste mensual estimado",
+	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
+	"billing.parameter.documents": "¿Cuántos documentos?",
+	"billing.parameter.hosting": "Alojamiento de datos en párrafos",
+	"billing.parameter.hours": "¿Cuántas horas de videos/audios?",
+	"billing.parameter.searches": "¿Cuántas búsquedas?",
 	"billing.payment_details": "Datos de pago",
 	"billing.payment_details.description": "El pago no se hará efectivo hasta finales de mes en función del uso realizado.",
 	"billing.payment_method": "Método de pago",
